# otus-python-basic_2023-05

./: .gitignore  README.md  requirements.txt
.github/workflows/: django.yml  pylint.yml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  view.py
homework_04/: __init__.py  crud.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  mixin.py  models.py  post.py  pyproject.toml  user.py
homework_04/alembic/: env.py
homework_04/alembic/versions/: 2500ba49f2b3_alter_table_post_title_varchar_120.py  a4189b71d800_create_tables_user_post.py
homework_05/: app.py  main.py  pyproject.toml
homework_05/templates/: about.html  base.html  index.html
homework_06/: .dockerignore  Dockerfile  Dockerfile-local  README.md  app.py  config.py  crud.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  pyproject.toml  task.txt
homework_06/migrations/: alembic.ini
homework_06/migrations/versions/: 2023_09_18_1350-56689f4605c7_create_tables_user_and_post.py
homework_06/models/: __init__.py  posts.py  users.py  users_posts.py
homework_06/templates/: base.html  index.html
homework_06/templates/posts/: add.html  base.html  confirm-delete.html  detail.html  index.html
homework_06/templates/users/: add.html  base.html  confirm-delete.html  detail.html  index.html
homework_06/views/: posts.py  users.py
homework_06/views/forms/: post.py  user.py  users.py
homework_07/: README.md  pyproject.toml
homework_07/blog/blog/: settings.py  urls.py
homework_07/blog/main/: admin.py  models.py  views.py
homework_07/blog/main/templates/: index.html
homework_07/blog/main/templates/main/: index.html
homework_07/blog/main/templates/posts/: detail.html  posts.html
homework_07/blog/main/templates/users/: index.html  users.html
homework_07/blog/templates/: root.html
homework_08/: README.md  pyproject.toml
homework_08/blog/blog/: settings.py  urls.py
homework_08/blog/main/: forms.py  models.py  urls.py  views.py
homework_08/blog/main/templates/main/: post_detail.html  post_form.html  post_list.html  user_detail.html  user_list.html
homework_08/blog/main/templates/users/: detail.html
homework_09/blog/blog/: settings.py
homework_09/blog/main/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
homework_09/blog/templates/: root.html
homework_10/: pylintrc  requirements.txt
homework_10/.github/workflows/: django.yml
homework_10/blog/blog/: urls.py
homework_10/blog/main/: forms.py  (+3 more)
homework_11/: README.md
project_sar/: .gitignore  README.md  alembic.ini  app.py  config.py  docker-compose.yml  main.py  pylintrc  pyproject.toml  requirements.txt
project_sar/.github/workflows/: pylint.yml
project_sar/ceramics/: crud.py  views.py
project_sar/migrations/: env.py
project_sar/migrations/versions/: 2023_11_30_0758-5525ccfe7f22_create_table_object_study.py  2023_11_30_0759-dda1bff0c5a2_create_table_packages.py  2023_11_30_0800-08fcd82162bb_create_table_vesseltypes.py  2023_11_30_0802-80acda186b69_create_table_partpots.py  2023_11_30_0803-6c170d0fb7d3_create_table_colorafterfirings.py  2023_12_02_1948-b467d71c8e64_create_table_analogies.py  2023_12_02_2020-d4c127398e7d_create_table_association_package_analogy.py
project_sar/models/: __init__.py  analogy.py  base.py  color_after_firing.py  database.py  mixins.py  object_study.py  package.py  packages_analogies_association.py  part_of_the_pot.py  vessel_type.py
project_sar/schemas/: __init__.py  analogy.py  color_after_firing.py  object_study.py  package.py  part_of_the_pot.py  vessel_type.py
project_sar/templates/: base.html
testing/test_homework_03/: test_app.py
(+25 files in other folders)
