[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["sar0868 <safarov-ar@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.17"
#python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standart"], version = "^0.23.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
