[tool.poetry]
name = "homework-06"
version = "0.1.0"
description = ""
authors = ["sar0868 <safarov-ar@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
flask-wtf = "^1.1.1"
email-validator = "^2.0.0.post2"



[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
