[tool.poetry]
name = "homework-07"
version = "0.1.0"
description = ""
authors = ["sar0868 <safarov-ar@yandex.ru>"]
readme = "README.md"
packages = [{include = "homework_07"}]

[tool.poetry.dependencies]
python = ">=3.10"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
