[tool.poetry]
name = "homework-08"
version = "0.1.0"
description = ""
authors = ["sar0868 <safarov-ar@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
django = "^4.2.5"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
