[tool.poetry]
name = "project-sar"
version = "0.1.0"
description = ""
authors = ["sar0868 <safarov-ar@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.24.0.post1"
psycopg2-binary = "2.9.9"
SQLAlchemy = "2.0.23"
alembic = "1.12.1"
black = "23.11.0"
python-multipart = "^0.0.6"
pylint = "^3.0.2"
fastapi = "^0.104.1"
httpx = "^0.25.2"
pytest = "^7.4.3"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.5.2"}
bcrypt = "4.1.1"
python-jose = "3.3.0"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
